src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__addition_ast_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Plus,
    left: LiteralInteger {
        value: 1,
    },
    right: LiteralInteger {
        value: 2,
    },
}
