src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__addition_compare_or_priority_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Or,
    left: BinaryExpression {
        operator: Greater,
        left: BinaryExpression {
            operator: Plus,
            left: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "x",
                    },
                ),
                base: None,
            },
            right: LiteralInteger {
                value: 1,
            },
        },
        right: LiteralInteger {
            value: 2,
        },
    },
    right: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "b1",
            },
        ),
        base: None,
    },
}
