src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__additon_of_three_variables_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Minus,
    left: BinaryExpression {
        operator: Plus,
        left: ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
        right: ReferenceExpr {
            kind: Member(
                Reference {
                    name: "y",
                },
            ),
            base: None,
        },
    },
    right: ReferenceExpr {
        kind: Member(
            Reference {
                name: "z",
            },
        ),
        base: None,
    },
}
