src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__amp_as_and_with_address_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: And,
    left: ReferenceExpr {
        kind: Member(
            Reference {
                name: "b",
            },
        ),
        base: None,
    },
    right: ReferenceExpr {
        kind: Address,
        base: Some(
            ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "c",
                    },
                ),
                base: None,
            },
        ),
    },
}
