src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__and_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: And,
    left: Reference {
        name: "b",
    },
    right: Reference {
        name: "c",
    },
}
