src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__arrays_in_structs_can_be_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
QualifiedReference {
    elements: [
        Reference {
            name: "x",
        },
        ArrayAccess {
            reference: Reference {
                name: "y",
            },
            access: LiteralInteger {
                value: 7,
            },
        },
    ],
}
