src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__arrays_of_structs_can_be_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
ReferenceExpr {
    kind: Member(
        Reference {
            name: "y",
        },
    ),
    base: Some(
        ReferenceExpr {
            kind: Index(
                LiteralInteger {
                    value: 1,
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Reference {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ),
        },
    ),
}
