src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__assignment_to_null.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
Assignment {
    left: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "x",
            },
        ),
        base: None,
    },
    right: LiteralNull,
}
